DATE       AUTHOR      CHANGE
---------- ----------- --------------------------------------------------------
2006-11-15 patrick     Replaced the use of vpr::ReturnStatus with bool in
                       tweek::CorbaManager, tweek::SubjectManagerImpl, and
                       tweek::CorbaService.
                       NEW VERSION: 1.1.10
2006-10-01 patrick     Updated for VPR 1.1.35.
                       NEW VERSION: 1.1.9
2006-10-01 patrick     Updated for VPR 1.1.31.
                       NEW VERSION: 1.1.8
2006-08-03 dshipton    Use flagpoll for metadata
                       NEW VERSION: 1.1.7
2006-07-12 patrick     Changed the DLL name to include the version as part of
                       the base library name on Windows. Implemented automatic
                       linking of the Tweek library.
                       NEW VERSION: 1.1.6
2006-06-25 patrick     Added support for building universal binaries on Mac
                       OS X.
                       NEW VERSION: 1.1.5
2006-05-26 dshipton    Make and install fully versioned libraries.
                       NEW VERSION: 1.1.4
2006-02-15 patrickh    Updated to VPR 1.1.16.
                       NEW VERSION: 1.1.3
2005-11-12 patrickh    Added tweek::SubjectManagerImpl::hasSubject().
                       NEW VERSION: 1.1.2
2005-06-09 patrickh    Updated to support Windows 64-bit edition.
                       NEW VERSION: 1.1.1
2005-06-07 patrickh    VR Juggler 2.0 branch created.
                       NEW VERSION: 1.1.0