@@ -1,3 +1,4 @@
+1.1.11-0 @01/30/2007 22:30:00 UTC@
 1.1.10-0 @11/15/2006 16:20:00 UTC@
 1.1.9-0 @10/01/2006 21:45:00 UTC@
 1.1.8-0 @10/01/2006 16:35:00 UTC@
